DR-2778 Enable reading data with DRS from buckets that have "Requester Pays" enabled (#1367)
* DRS resolution now passes in the snapshot's project

...to access source files.

This ensures that if the data happens to live in a "requester pays" bucket, it can bill the egress to the snapshot's project

* Make sure that snapshot readers and stewards can egress RP hosted files

This is handled similarly to how users need permission to execute a query to the dataset's bigquery from a snapshot's project (e.g. the snapshot project gets billed)

* Add integration test