@@ -1,10 +1,8 @@
 package bio.terra.service.common.gcs;
 
-import bio.terra.service.filedata.exception.InvalidDrsIdException;
 import bio.terra.service.resourcemanagement.google.GoogleBucketResource;
 import com.google.cloud.storage.BlobId;
 import com.google.cloud.storage.BlobInfo;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.regex.Pattern;
@@ -102,21 +100,22 @@ public final class GcsUriUtils {
     return lastWildcard >= 0 ? newPath.substring(0, lastWildcard + 1) : newPath;
   }
 
-  public static String makeHttpsFromGs(String gspath) {
-    try {
-      BlobId locator = GcsUriUtils.parseBlobUri(gspath);
-      String gsBucket = locator.getBucket();
-      String gsPath = locator.getName();
-      String encodedPath =
-          URLEncoder.encode(gsPath, StandardCharsets.UTF_8.toString())
-              // Google does not recognize the + characters that are produced from spaces by the
-              // URLEncoder.encode
-              // method. As a result, these must be converted to %2B.
-              .replaceAll("\\+", "%20");
-      return String.format(
-          "https://www.googleapis.com/storage/v1/b/%s/o/%s?alt=media", gsBucket, encodedPath);
-    } catch (UnsupportedEncodingException ex) {
-      throw new InvalidDrsIdException("Failed to urlencode file path", ex);
+  public static String makeHttpsFromGs(String gspath, String userProject) {
+    BlobId locator = GcsUriUtils.parseBlobUri(gspath);
+    String gsBucket = locator.getBucket();
+    String gsPath = locator.getName();
+    String userProjectParam;
+    if (userProject != null) {
+      userProjectParam = "userProject=%s&".formatted(userProject);
+    } else {
+      userProjectParam = "";
     }
+    String encodedPath =
+        URLEncoder.encode(gsPath, StandardCharsets.UTF_8)
+            // Google does not recognize the + characters that are produced from spaces by the
+            // URLEncoder.encode method. As a result, these must be converted to %2B.
+            .replaceAll("\\+", "%20");
+    return "https://www.googleapis.com/storage/v1/b/%s/o/%s?%salt=media"
+        .formatted(gsBucket, encodedPath, userProjectParam);
   }
 }
